--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
 
         <service
-            android:name=".connection_manager.service.UdpListenerService"
+            android:name=".connection_manager.service.SocketListenerService"
             android:stopWithTask="true"/>
 
     </application>
